--- a/remote_template.html
+++ b/remote_template.html
@@ -11,7 +11,7 @@
         .dpp-table th { background-color: #f8f9fa; width: 30%; color: #333; }
         .nested-table { width: 100%; background-color: #fafafa; margin: 5px 0; }
     </style>
-    <title>DPP |{{credentialSubject.producedByParty.name}}</title>
+    <title>DPP | {{credentialSubject.name}}</title>
 </head>
 
 <body>
