--- a/remote_template.html
+++ b/remote_template.html
@@ -34,6 +34,7 @@
 
     <div class="dpp-wrapper">
     <header>
+      <h1>DIGITAL PRODUCT PASSPORT</h1>  
       <h1>{{credentialSubject.name}}</h1>
       <p>{{credentialSubject.description}}</p>
     </header>
