--- a/remote_template.html
+++ b/remote_template.html
@@ -11,7 +11,7 @@
         .dpp-wrapper { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         h1 { color: #2c3e50; margin-top: 0; }
         details { border: 1px solid #ddd; margin-bottom: 10px; border-radius: 4px; transition: all 0.3s; }
-        summary { padding: 12px; font-weight: bold; cursor: pointer; background: #eee; outline: none; }
+        summary { padding: 12px; font-weight: bold; cursor: pointer; background: ##c3bfa6; outline: none; }
         details[open] summary { background: #bbb69f; color: white; }
         .details-content { padding: 15px; line-height: 1.6; }
         
