--- a/remote_template.html
+++ b/remote_template.html
@@ -84,7 +84,7 @@
 
 
     {{#if credentialSubject.circularityScorecard}}
-        <details>
+        <details open>
             <summary>Circularity Scorecard</summary>
             <div class="details-content">
                 <table class="dpp-table">
@@ -102,7 +102,7 @@
        {{/if}}
             
 
-    <details>
+    <details open>
       <summary>Traceability Events</summary>
       <div class="details-content">
         <p><strong>Process:</strong> {{credentialSubject.traceabilityInformation.valueChainProcess}}</p>
