--- a/remote_template.html
+++ b/remote_template.html
@@ -29,7 +29,7 @@
 </head>
     
 <body>
-
+  <div class="dpp-container">
     {{#if credentialSubject}}
     <div class="dpp-wrapper">
     <header>
@@ -176,7 +176,7 @@
     {{else}}
         <p style="color:red;">Error: credentialSubject data not found in the provided context.</p>
     {{/if}}
-
+</div>
 </div>
 </body>
 </html>
