--- a/remote_template.html
+++ b/remote_template.html
@@ -45,7 +45,7 @@
                  alt="Product Image" 
                  class="product-main-img">
         {{else}}
-            <img src="https://via.placeholder.com/150?text=Placeholder" 
+            <img src="https://placehold.co/200x150" 
              alt="Placeholder" 
              class="product-main-img">
         {{/if}}
