--- a/remote_template.html
+++ b/remote_template.html
@@ -57,7 +57,7 @@
       <div class="details-content">
         <table class="dpp-table">
           <tr>
-            <th>Description</th>
+            <th style="vertical-align: top;">Description</th>
             <td>{{credentialSubject.description}}</td>
           </tr>          
           <tr>
