--- a/remote_template.html
+++ b/remote_template.html
@@ -103,8 +103,8 @@
                         <td>{{this.name}}</td>
                       </tr> 
                       <tr>          
-                        <th>Material</th>
-                        <td>{{this.name}}</td>
+                        <th>Hazardousity</th>
+                        <td>{{this.hazardous}}</td>
                       </tr>
                       <tr>          
                         <th>Mass fraction</th>
