--- a/dpp_template.html
+++ b/dpp_template.html
@@ -2,14 +2,195 @@
 <html>
   <head>
     <style>
-  
-        
-    </style>   
-    
+      :root { --font-main: 'Inter', -apple-system, sans-serif; --font-mono: 'JetBrains Mono', 'Fira Code', monospace; --radius: 12px; --shadow: 0 4px 20px rgba(0, 0, 0, 0.08); --dpp-primary: #10b981; --dcc-primary: #3b82f6; --dia-primary: #64748b; }
+       .verified-badge, .safe-badge, .score-high { background: var(--dpp-primary); }
+       .revoked-badge, .hazardous-badge, .score-low { background: #ef4444; }
+       .unknown-badge, .score-mid { background: #f59e0b; }
+       body { margin: 0; padding: 0; min-height: 100vh; display: flex; justify-content: center;  align-items: center; background-color: #f3f4f6; }
+       .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 40px; }
+      .credential-card { font-family: var(--font-main); max-width: 640px; /* Adjust this to preferred width */ width: 100%; min-width: 400px; background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 0; margin: 10px; }
+       .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
+       .credential-body { padding: 20px; }
+       .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
+       .label { flex: 0 0 40%; color: #6b7280; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; }
+       .value { flex: 0 0 60%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; word-break: break-all; overflow-wrap: anywhere; }
+       .item-dpp { border-top: 4px solid var(--dpp-primary); }
+       .item-dpp .credential-header { background: linear-gradient(to top, #ffffff, #dfebe1); }
+       .item-dpp .credential-header::before { content: '♻️'; font-size: 1.8rem; }
+       .badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.7rem; }
+       .topic-group { margin-top: 15px; background: #f7f7f7; border-radius: 8px; padding: 12px; border: 1px solid #f3f4f6; }
+       .topic-header { font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; color: #374151; margin-bottom: 10px; display: flex; align-items: center; gap: 6px; }
+       .larger { font-size: 1rem; font-weight: 700; }
+       .item-dpp .topic-header { border-left: 3px solid var(--dpp-primary); padding-left: 8px; }
+       .topic-group .data-row { margin-bottom: 6px; }
+       .topic-group .data-row:last-child { margin-bottom: 0; }
+       .topic-group table { width: 100%; border-collapse: collapse; margin-top: 10px; font-size: 0.8rem; line-height: 1.4; }
+       .topic-group th { text-align: left; padding: 8px 4px; border-bottom: 2px solid #e5e7eb; color: #6b7280; font-weight: 600; text-transform: uppercase; font-size: 0.75rem; }
+       .topic-group td { padding: 8px 4px; border-bottom: 1px solid #f3f4f6; color: #111827; }
+       .topic-group tr:last-child td { border-bottom: none; }
+       .topic-group table badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.7rem; }
+       .topic-group td:first-child { font-weight: 500; color: #374151; }
+       .topic-group.media-layout { display: flex; flex-direction: column;  gap: 12px; }
+       .topic-media { width: 100%; }
+       .topic-media img { width: 100%; max-height: 300px; object-fit: cover; margin-bottom: 12px; }
+       .topic-content { width: 100%; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+       .topic-content .data-row.full-width { grid-column: span 2; }
+       .score-container { display: flex; flex-direction: column; align-items: flex-end; width: 100%; }
+       .score-track { width: 100px; height: 8px; background: #e5e7eb;border-radius: 4px; margin-top: 6px; overflow: hidden; position: relative; }
+       .score-fill { height: 100%; border-radius: 4px; transition: width 0.5s ease-in-out; }
+       .external-link { color: #2563eb; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 4px; border-bottom: 1px solid transparent; transition: all 0.2s ease; }
+       .external-link:hover { border-bottom: 1px solid #2563eb; color: #1d4ed8; }
+       .external-link::after { content: '↗'; font-size: 0.85rem; font-weight: bold; }
+       .item-anchor .external-link { font-family: var(--font-mono); font-size: 0.75rem; }     
+    </style>    
     <title>Digital Product Passport</title>
   </head>
   
   <body>
+
+    <div style="display: flex; gap: 20px; padding: 20px; flex-wrap: wrap">
+  <div class="card-viewer">
+
+    <article class="credential-card item-dpp">
+      <div class="credential-header">
+        <strong>DIGITAL PRODUCT PASSPORT</strong>
+      </div>
+
+      <div class="credential-body">
+        <div class="topic-group">
+          <div class="topic-header larger">Textendifier 3000 XL</div>
+          <div class="topic-media">
+            <img src="https://placehold.co/200x150" alt="pic" />
+          </div>
+          <div class="data-row">
+            <span class="label">Product model</span>
+            <span class="value">Textendifier 3000 XL</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Description</span>
+            <span class="value"
+              >Sorted post-consumer textile waste. Denim garments. Fiber
+              content: CO min. 90% / PES max. 7% / EL max. 3%</span
+            >
+          </div>
+          <div class="data-row">
+            <span class="label">DPP ID</span>
+            <span class="value"
+              >did:web:inx.collab-cloud.eu:lsjh:sorted:batch:889900</span
+            >
+          </div>
+          <div class="data-row">
+            <span class="label">Batch number</span>
+            <span class="value">889900</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Serial number</span>
+            <span class="value">N/A</span>
+          </div>
+        </div>
+
+        <div class="topic-group">
+          <div class="topic-header">Material Composition</div>
+          <div class="data-row">
+            <span class="label">Cobalt (Recycled)</span>
+            <span class="value">12%</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Lithium Purity</span>
+            <span class="value">99.8%</span>
+          </div>
+        </div>
+
+        <div class="topic-group">
+          <div class="topic-header">Sustainability Metrics</div>
+          <div class="data-row">
+            <span class="label">GWP (Total)</span>
+            <span class="value">4.2 tCO2e</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Energy Mix</span>
+            <span class="value">Renewable</span>
+          </div>
+        </div>
+
+        <div class="topic-group">
+          <div class="topic-header">Circularity</div>
+          <div class="data-row">
+            <span class="label">Recyclability Score</span>
+            <div class="value score-container">
+              <span>6.5 / 10</span>
+              <div class="score-track">
+                <div class="score-fill score-mid" style="width: 65%">                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="topic-group">
+          <div class="topic-header">Sustainability scores</div>
+          <div class="data-row">
+            <span class="label">Repair Score</span>
+            <div class="value score-container">
+              <span>8.5 / 10</span>
+              <div class="score-track">
+                <div class="score-fill score-high" style="width: 85%">                  
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="data-row">
+            <span class="label">Carbon Footprint</span>
+            <div class="value score-container">
+              <span>3.2 / 10</span>
+              <div class="score-track">
+                <div class="score-fill score-low" style="width: 32%"></div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="topic-group">
+          <div class="topic-header">Material content</div>
+          <table>
+            <thead>
+              <tr>
+                <th>Material</th>
+                <th>Mass %</th>
+                <th>Recycled %</th>
+                <th>Hzd</th>
+                <th>Origin</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>CO</td>
+                <td>90%</td>
+                <td>50%</td>                
+                <td><span class="badge safe-badge">Safe</span></td>
+                <td>FI</td>
+              </tr>
+              <tr>
+                <td>PES</td>
+                <td>7%</td>
+                <td>0%</td>
+                <td><span class="badge safe-badge">Safe</span></td>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <td>EL</td>
+                <td>3%</td>
+                <td>0%</td>
+                <td><span class="badge unknown-badge">Unknown</span></td>
+                <td>PT</td>                
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </article>
   
   
   </body>
