--- a/dpp_template.html
+++ b/dpp_template.html
@@ -154,21 +154,21 @@
             </thead>
             <tbody>
               <tr>
-                <td>CO</td>
+                <td>Cotton</td>
                 <td>90%</td>
                 <td>50%</td>                
                 <td><span class="badge safe-badge">Safe</span></td>
                 <td>FI</td>
               </tr>
               <tr>
-                <td>PES</td>
+                <td>Polyester</td>
                 <td>7%</td>
                 <td>0%</td>
                 <td><span class="badge safe-badge">Safe</span></td>
                 <td>N/A</td>
               </tr>
               <tr>
-                <td>EL</td>
+                <td>Elastane</td>
                 <td>3%</td>
                 <td>0%</td>
                 <td><span class="badge unknown-badge">Unknown</span></td>
