Refactor nested data row CSS styles
Removed margin-top from nested data row style.

--- a/remote_template.html
+++ b/remote_template.html
@@ -42,7 +42,7 @@
        .external-link:hover { border-bottom: 1px solid #2563eb; color: #1d4ed8; }
        .external-link::after { content: '↗'; font-size: 0.85rem; font-weight: bold; }
        .item-anchor .external-link { font-family: var(--font-mono); font-size: 0.75rem; }
-       .data-row.nested { margin-left: 15px; margin-top: -4px; border-left: 1px dashed #e5e7eb; padding-left: 10px; }
+       .data-row.nested { margin-left: 15px; border-left: 1px dashed #e5e7eb; padding-left: 10px; }
        .data-row.nested .label { flex: 0 0 calc(30% - 25px); font-size: 0.7rem; color: #9ca3af; }
        .data-row.nested .value { flex: 0 0 70%; font-size: 0.85rem; font-weight: 500; }
     </style>    
