--- a/remote_template.html
+++ b/remote_template.html
@@ -13,7 +13,7 @@
        .credential-body { padding: 20px; }
        .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
        .label { flex: 0 0 30%; color: #6b7280; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; }
-       .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; word-break: break-all; overflow-wrap: anywhere; }
+       .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; word-break: break-word; overflow-wrap: anywhere; }
        .item-dpp { border-top: 4px solid var(--dpp-primary); }
        .item-dpp .credential-header { background: linear-gradient(to top, #ffffff, #dfebe1); }
        .item-dpp .credential-header::before { content: '♻️'; font-size: 1.8rem; }
@@ -25,7 +25,7 @@
        .topic-group .data-row { margin-bottom: 6px; }
        .topic-group .data-row:last-child { margin-bottom: 0; }
        .topic-group table { width: 100%; border-collapse: collapse; margin-top: 10px; font-size: 0.8rem; line-height: 1.4; }
-       .topic-group th { text-align: left; padding: 8px 4px; border-bottom: 2px solid #e5e7eb; color: #6b7280; font-weight: 600; text-transform: uppercase; font-size: 0.75rem; }
+       .topic-group th { text-align: left; padding: 8px 4px; border-bottom: 2px solid #e5e7eb; color: #6b7280; font-weight: 500; text-transform: uppercase; font-size: 0.75rem; letter-spacing: 0.05em; }   
        .topic-group td { padding: 8px 4px; border-bottom: 1px solid #f3f4f6; color: #111827; }
        .topic-group tr:last-child td { border-bottom: none; }
        .topic-group table badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.7rem; }
@@ -75,8 +75,16 @@
             {{/if}}
           </div>
           <div class="data-row">
-            <span class="label">Product model</span>
+            <span class="label">Product</span>
             <span class="value">{{credentialSubject.name}}</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Manufacturer</span>
+            <span class="value">{{credentialSubject.producedByParty.name}}</span>
+          </div>
+          <div class="data-row">
+            <span class="label">Production location</span>
+            <span class="value">{{credentialSubject.producedAtFacility.name}} ({{credentialSubject.countryOfProduction}})</span>
           </div>
           <div class="data-row">
             <span class="label">Description</span>
@@ -113,7 +121,8 @@
         </div>
 
         <div class="topic-group">
-          <div class="topic-header">Material Composition</div>
+          <div class="topic-header">Material provenance</div>
+          
           <div class="data-row">
             <span class="label">Cobalt (Recycled)</span>
             <span class="value">12%</span>
@@ -163,6 +172,30 @@
 
         </div>
 
+        <div class="topic-group">
+          <div class="topic-header">Material Provenance</div>
+          <table>
+            <thead>
+              <tr>
+                <th>Material</th>
+                <th>Origin</th>
+                <th>Mass</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{#each credentialSubject.materialsProvenance}}
+                <tr>
+                  <td>{{name}}</td>                 
+                  <td>{{originCountry}}</td>                  
+                  <td style="text-align: right; padding-right: 15px;">
+                    {{massAmount.value}} {{massAmount.unit}}
+                  </td>
+                </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        </div>
+        
         <div class="topic-group">
           <div class="topic-header">Material content</div>
           <table>
