--- a/remote_template.html
+++ b/remote_template.html
@@ -13,7 +13,7 @@
        .credential-body { padding: 20px; }
        .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
        .label { flex: 0 0 30%; color: #6b7280; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; }
-       .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; word-break: break-word; overflow-wrap: anywhere; }
+       .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; overflow-wrap: break-word; }
        .item-dpp { border-top: 4px solid var(--dpp-primary); }
        .item-dpp .credential-header { background: linear-gradient(to top, #ffffff, #dfebe1); }
        .item-dpp .credential-header::before { content: '♻️'; font-size: 1.8rem; }
