--- a/remote_template.html
+++ b/remote_template.html
@@ -9,7 +9,7 @@
        body { margin: 0; padding: 0; min-height: 100vh; display: flex; justify-content: center;  align-items: center; background-color: #f3f4f6; }
        .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 40px; }
        .credential-card { font-family: var(--font-main); max-width: 640px; /* Adjust this to preferred width */ width: 100%; min-width: 400px; background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 0; margin: 10px; }
-       .credential-header { padding: 16px 20px 10px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
+       .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
        .credential-body { padding: 20px; }
        .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
        .label { flex: 0 0 30%; color: #6b7280; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; }
@@ -19,7 +19,7 @@
        .item-dpp .credential-header::before { content: '♻️'; font-size: 1.8rem; }
        .badge { color: #ffffff; font-weight: 900; padding: 2px 8px; border-radius: 99px; font-size: 0.7rem; }
        .topic-group { margin-top: 15px; background: #f7f7f7; border-radius: 8px; padding: 12px; border: 1px solid #f3f4f6; }
-       .topic-header { font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; color: #374151; margin-bottom: 10px; display: flex; align-items: center; gap: 6px; }
+       .topic-header { font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em; color: #374151; margin-bottom: 15px; display: flex; align-items: center; gap: 6px; }
        .larger { font-size: 1rem; font-weight: 700; }
        .item-dpp .topic-header { border-left: 3px solid var(--dpp-primary); padding-left: 8px; }
        .topic-group .data-row { margin-bottom: 6px; }
