--- a/remote_template.html
+++ b/remote_template.html
@@ -36,7 +36,7 @@
        .topic-content { width: 100%; display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
        .topic-content .data-row.full-width { grid-column: span 2; }
        .score-container { display: flex; flex-direction: column; align-items: flex-end; width: 100%; }
-       .score-track { width: 100px; height: 8px; background: #e5e7eb;border-radius: 4px; margin-top: 6px; overflow: hidden; position: relative; }
+       .score-track { width: 30%; height: 8px; background: #e5e7eb;border-radius: 4px; margin-top: 6px; overflow: hidden; position: relative; }
        .score-fill { height: 100%; border-radius: 4px; transition: width 0.5s ease-in-out; }
        .external-link { color: #2563eb; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 4px; border-bottom: 1px solid transparent; transition: all 0.2s ease; }
        .external-link:hover { border-bottom: 1px solid #2563eb; color: #1d4ed8; }
