--- a/remote_template.html
+++ b/remote_template.html
@@ -47,7 +47,7 @@
        .data-row.nested .value { flex: 0 0 70%; font-size: 0.9rem; font-weight: 500; }
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
     </style>    
-    <title>Digital Product Passport</title>
+    <title>Digital Product Passport 22</title>
   </head>
   
   <body>
