--- a/remote_template.html
+++ b/remote_template.html
@@ -8,7 +8,7 @@
        .unknown-badge, .score-mid { background: #f59e0b; }
        body { margin: 0; padding: 0; min-height: 100vh; display: flex; justify-content: center;  align-items: center; background-color: #f3f4f6; }
        .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 40px; }
-       .credential-card { font-family: var(--font-main); width: clamp(300px, 95%, 640px); background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 0; margin: 10px auto; }
+       .credential-card { font-family: var(--font-main); width: clamp(300px, 95%, 640px); background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 1; margin: 10px auto; }
        .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
        .credential-body { padding: 20px; }
        .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
@@ -47,7 +47,7 @@
        .data-row.nested .value { flex: 0 0 70%; font-size: 0.9rem; font-weight: 500; }
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
     </style>    
-    <title>Digital Product Passport 22</title>
+    <title>Digital Product Passport</title>
   </head>
   
   <body>
@@ -57,7 +57,7 @@
 
     <article class="credential-card item-dpp">
       <div class="credential-header">
-        <strong>DIGITAL PRODUCT PASSPORT</strong>
+        <strong>DIGITAL PRODUCT PASSPORT 33</strong>
       </div>
 
       <div class="credential-body">
