--- a/remote_template.html
+++ b/remote_template.html
@@ -7,10 +7,10 @@
        .revoked-badge, .hazardous-badge, .score-low { background: #ef4444; }
        .unknown-badge, .score-mid { background: #f59e0b; }
        body { margin: 0; padding: 0; min-height: 100vh; display: flex; justify-content: center;  align-items: center; background-color: #f3f4f6; }
-       .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 20px; box-sizing: border-box; width: 100%; max-width: 1200px; }
-       .credential-card { font-family: var(--font-main); width: clamp(280px, 95%, 800px); background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 1; flex-grow: 0; margin: 10px auto; box-sizing: border-box; }
+       .card-viewer { display: flex; flex-direction: row; gap: 24px; flex-wrap: wrap; justify-content: center; padding: 20px; box-sizing: border-box; width: 100%; max-width: 900px; }
+       .credential-card { font-family: var(--font-main); width: clamp(280px, 95%, 640px); background: #ffffff; border-radius: var(--radius); border: 1px solid #e5e7eb; box-shadow: var(--shadow); overflow: hidden; position: relative; transition: transform 0.2s ease; flex-shrink: 1; flex-grow: 0; margin: 10px auto; box-sizing: border-box; }
        .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
-       .credential-body { padding: 20px; }
+       .credential-body { padding: 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; min-width: 0; }
        .data-row { display: flex; align-items: flex-start; margin-bottom: 12px; font-size: 0.9rem; width: 100%; }
        .label { flex: 0 0 30%; color: #6b7280; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; }
        .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; overflow-wrap: break-word; }
@@ -57,7 +57,7 @@
 
     <article class="credential-card item-dpp">
       <div class="credential-header">
-        <strong>DIGITAL PRODUCT PASSPORT</strong>
+        <strong>DIGITAL PRODUCT PASSPORT he</strong>
       </div>
 
       <div class="credential-body">
