--- a/remote_template.html
+++ b/remote_template.html
@@ -12,7 +12,7 @@
       .credential-header { padding: 16px 20px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6; }
       .item-dpp .credential-header::before { content: '♻️'; font-size: 2.25rem; }
       .credential-body { padding: 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; min-width: 0; }
-      .data-row { display: flex; align-items: flex-start; margin-bottom: 18px; font-size: 1.12rem; width: 100%; }
+      .data-row { display: flex; align-items: flex-start; margin-bottom: 18px; font-size: 1.12rem; width: 100%; align-items: baseline; }
       .label { flex: 0 0 30%; color: #6b7280; font-size: 0.95rem; text-transform: uppercase; letter-spacing: 0.05em; text-align: left; line-height: 1.5; }
       .value { flex: 0 0 70%; font-weight: 600; color: #111827; text-align: right; padding-right: 15px; line-height: 1.5; white-space: normal; overflow-wrap: break-word; }
       .item-dpp { border-top: 4px solid var(--dpp-primary); }
