--- a/remote_template.html
+++ b/remote_template.html
@@ -247,9 +247,19 @@
                 <div class="score-fill score-low" style="width: 32%"></div>
               </div>
             </div>
-          </div>        
-          
-      </div>
+          </div>  
+
+          <div class="data-row">
+            <span class="label">Recycling information</span>
+            <span class="value"><a href="https://example.com/Recycling_information.pdf" target="_blank" class="external-link">Recycling_information.pdf</a></span>
+          </div>
+
+          <div class="data-row">
+            <span class="label">Repair information</span>
+            <span class="value"><a href="https://example.com/Repair_information.pdf" target="_blank" class="external-link">Repair_guide.pdf</a></span>
+          </div>
+
+        </div>
        
         <div class="topic-group">
           <div class="topic-header">Sustainability metrics</div>
