--- a/remote_template.html
+++ b/remote_template.html
@@ -126,7 +126,10 @@
           {{/each}}
 
         </div>
+        
+      <button id="download-btn">Download This Data</button>
 
+        
         <div class="topic-group">
           <div class="topic-header">Material Provenance</div>
           <table>
