--- a/remote_template.html
+++ b/remote_template.html
@@ -47,7 +47,7 @@
       .data-row.nested .value { flex: 0 0 60%; font-size: 1.125rem; font-weight: 500; }
       .truncate-row { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
       #download-btn { margin-left: auto; background: transparent; color: ##688276; border: 1px solid ##688276; padding: 2px 8px; font-size: 10px; font-family: monospace; text-transform: uppercase; border-radius: 0; transition: 0.2s; }
-      #download-btn:hover { background: #00ff88; color: #688276; box-shadow: 0 0 10px rgba(0, 255, 136, 0.5); }
+      #download-btn:hover { background: var(--dpp-primary); color: #688276; box-shadow: 0 0 10px rgba(0, 255, 136, 0.5); }
     </style>    
     <title>Digital Product Passport</title>
   </head>
